--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Text Adventure Game Development
-description: Explore a collection of my projects and contributions. Feel free to browse through my repositories, and don’t hesitate to reach out if you have any questions or collaboration ideas. You can contact me via <a href="https://www.linkedin.com/in/batinkimberly/">LinkedIn</a>. 
+description: You can contact me via <a href="https://www.linkedin.com/in/batinkimberly/">LinkedIn</a> for collaboration or feedback. 
 # logo: just in case i want to put photo
 # description below image if there is
 # from here: https://github.com/pages-themes/minimal?tab=readme-ov-file
